[gd_scene load_steps=5 format=2]

[ext_resource path="res://res/UI/Sign.tres" type="Theme" id=1]
[ext_resource path="res://res/items/emptyItem.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/selectItemReward.gd" type="Script" id=3]
[ext_resource path="res://scenes/UI/RewardButton.gd" type="Script" id=4]

[node name="SelectItemReward" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -976.0
margin_bottom = -624.0
rect_pivot_offset = Vector2( -200, 416 )
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 300.0
margin_bottom = 96.0
rect_min_size = Vector2( 300, 96 )
rect_clip_content = true
color = Color( 0.0627451, 0.0509804, 0.0509804, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -71.5
margin_top = 8.0
margin_right = 71.5
margin_bottom = 40.0
alignment = 1

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
margin_right = 143.0
margin_bottom = 16.0
size_flags_vertical = 1
theme = ExtResource( 1 )
text = "Choose reward"

[node name="ItemButtons" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
margin_top = 20.0
margin_right = 143.0
margin_bottom = 58.0

[node name="Button1" type="Button" parent="ColorRect/VBoxContainer/ItemButtons"]
margin_right = 44.0
margin_bottom = 38.0
icon = ExtResource( 2 )
flat = true
script = ExtResource( 4 )

[node name="Button2" type="Button" parent="ColorRect/VBoxContainer/ItemButtons"]
margin_left = 48.0
margin_right = 92.0
margin_bottom = 38.0
icon = ExtResource( 2 )
flat = true
script = ExtResource( 4 )

[connection signal="pressed" from="ColorRect/VBoxContainer/ItemButtons/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/ItemButtons/Button2" to="." method="_on_Button2_pressed"]
